iKYC/SME Phase -1/Istio/Istio-demo/jwt-authentication/request_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: global-jwt-auth
  namespace: istio-routing
spec:
  jwtRules:
    - issuer: "https://dev-h2xowy2qavo6bxrc.us.auth0.com"
      jwksUri: "https://dev-h2xowy2qavo6bxrc.us.auth0.com/.well-known/jwks.json"
