iKYC/SME Phase -1/Istio/Istio-demo/jwt-authentication/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: istio-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          args:
            - start-dev
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: istio-microservice
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
